# ros2_smart_template_py

./: README.md  package.xml  setup.cfg  setup.py
smart_control_interfaces/: CMakeLists.txt  README.md  package.xml
smart_control_interfaces/action/: MoveStage.action
smart_control_interfaces/srv/: GetPoint.srv
smart_template/: mri_tracking_interface.py  package.xml  plugin.xml  setup.cfg  setup.py  template.py
smart_template/files/: zframe.csv
smart_template/launch/: hardware_template.launch.py  robot.launch.py  virtual_template.launch.py
smart_template/smart_template/: initialization.py  keypress.py  mri_tracking_interface.py  smart_needle_interface.py  smart_template_gui.py  template.py  virtual_template.py
smart_template_description/: CMakeLists.txt  package.xml
smart_template_description/meshes/: needle_link.stl  needle_link_biopsygun.stl  needle_link_smartneedle.stl  needle_link_stylet.stl  world.stl
smart_template_description/rviz/: urdf.rviz
smart_template_description/urdf/: smart_template.ros2_control.xacro  smart_template.urdf.xacro  smart_template.xacro  zframe.xacro
smart_template_interfaces/: CMakeLists.txt  README.md  package.xml
smart_template_interfaces/srv/: GetPose.srv  Move.srv
smart_template_py/: package.xml  plugin.xml  setup.cfg  setup.py
smart_template_py/files/: zframe.csv
smart_template_py/launch/: hardware_template.launch.py  robot.launch.py  virtual_template.launch.py
smart_template_py/smart_template_py/: new_template.py  requirements.txt  smart_template_gui.py  template.py  virtual_template.py  world_pose_listener.py
